<resources>
    <string name="app_name">Moviedroid</string>
    <string name="title">Moviedroid Apps!</string>

    <string name="app_spotify">SPOTIFY MOVIES</string>
    <string name="app_scores">SCORES APP</string>
    <string name="app_library">LIBRARY APP</string>
    <string name="app_bigger">BUILD IT BIGGER</string>
    <string name="app_reader">CLOUD READER</string>
    <string name="app_custom">CUSTOM APP</string>

    <string name="title_activity_movies">Top 20 Movies</string>
    <string name="title_activity_scores">Scores Activity</string>
    <string name="title_activity_spotify">Spotify Movies</string>
    <string name="title_activity_favorite">My Favorites</string>

    <!-- Action menu label -->
    <string name="action_favorite">Favorite Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_movie_details">Movie Details</string>

    <!-- Movie details label -->
    <string name="label_movie_rating">Rating</string>
    <string name="label_movie_release_date">Release Date</string>
    <string name="title_activity_movie_settings">Settings</string>
    <string name="title_activity_movie_trailers">Trailers</string>
    <string name="title_activity_movie_reviews">Reviews</string>
    <string name="title_activity_movie_actions">Actions:</string>

    <!-- Strings related to Settings -->
    <string name="pref_sort_by_key">sortby</string>
    <string name="pref_sort_by_title">Sort settings</string>
    <string name="dialog_sort_by_title">Movies sorting by</string>
    <string name="pref_sort_by_default_value">0</string>
    <string-array name="movies_sort_by_list_labels">
        <item>Most Popular</item>
        <item>Highest Rated</item>
        <item>Favorites</item>
    </string-array>

    <string-array name="movies_sort_by_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
